Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-958

tests: debug_mb set incorrectly for smp or vm

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • None
    • None
    • VMwareFusion on MacBook Pro
      or node with 8 processors, 4 cpu cores each
    • 3
    • 4680

      Actually debug_mb in lustre code depends from num_possible_cpus(). That could be different number than number of CPU in the system.

      Test suit reads CPU in the system.

      Fixed in MRP-219 of Xyratex by using /sys/devices/system/cpu/possible.

            wc-triage WC Triage
            denis_kondratenko Denis Kondratenko (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: