LU-958 tests: debug_mb set incorrectly for smp or vm

For cpus with number of cores or for some VMs, number of possible CPUs
in the system could be greater than number of cpu reported by getconf.
Added check for maximum debug buffer size.
Added check if that "possible" exists, if not - use old method.

The patch of LU-1249 is also invloved to auto correct improper debug
buffer size setting.

port of patch 2ccb34d882b01305794e7780b6dd691179ddae7e
port of patch 28817cbd133c626042f9b142600c03187ba4a7ce
Xyratex-bug-id: MRP-219 incorrect settings for debug_mb

Test-Parameters: clientarch=x86_64 serverarch=x86_64 testlist=mmp

Signed-off-by: Denis Kondratenko <Denis_Kondratenko@xyratex.com>
Signed-off-by: Bobi Jam <bobijam@gmail.com>
Signed-off-by: Liu Ying <emoly.liu@intel.com>
Change-Id: Ib1e39a26e4d4af8e599d6e5fcdb1fecff8a6f4fa
Reviewed-on: http://review.whamcloud.com/4962
Reviewed-by: Jian Yu <jian.yu@intel.com>
Tested-by: Hudson
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Tested-by: Maloo <whamcloud.maloo@gmail.com>